<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.macormap.lasveglia.MainActivity">

    <item
        android:id="@+id/action_closeapp"
        android:orderInCategory="100"
        android:title="@string/action_closeapp"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_infoapp"
        android:orderInCategory="100"
        android:title="@string/action_infoapp"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_undo"
        android:orderInCategory="100"
        android:title="@string/action_undo"
        android:visible="false"
        app:showAsAction="never" />

</menu>



<!--

<item
android:id="@+id/action_null"
android:orderInCategory="100"
android:title=""
app:showAsAction="never" />

-->